--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>React App</title>
   </head>
-  <body style="overflow: hidden; height: 100vh">
+  <body style="overflow: hidden; height: 100vh; background-color: whitesmoke">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
